--- a/en/v1.1-dev/manual/strings/index.html
+++ b/en/v1.1-dev/manual/strings/index.html
@@ -366,7 +366,28 @@ julia&gt; r&quot;\x&quot;
 r&quot;\x&quot;
 
 julia&gt; &quot;\x&quot;
-ERROR: syntax: invalid escape sequence</code></pre><p>Triple-quoted regex strings, of the form <code>r&quot;&quot;&quot;...&quot;&quot;&quot;</code>, are also supported (and may be convenient for regular expressions containing quotation marks or newlines).</p><h2><a class="nav-anchor" id="man-byte-array-literals-1" href="#man-byte-array-literals-1">Byte Array Literals</a></h2><p>Another useful non-standard string literal is the byte-array string literal: <code>b&quot;...&quot;</code>. This form lets you use string notation to express read only literal byte arrays – i.e. arrays of <a href="../../base/numbers/#Core.UInt8"><code>UInt8</code></a> values. The type of those objects is <code>CodeUnits{UInt8, String}</code>. The rules for byte array literals are the following:</p><ul><li>ASCII characters and ASCII escapes produce a single byte.</li><li><code>\x</code> and octal escape sequences produce the <em>byte</em> corresponding to the escape value.</li><li>Unicode escape sequences produce a sequence of bytes encoding that code point in UTF-8.</li></ul><p>There is some overlap between these rules since the behavior of <code>\x</code> and octal escapes less than 0x80 (128) are covered by both of the first two rules, but here these rules agree. Together, these rules allow one to easily use ASCII characters, arbitrary byte values, and UTF-8 sequences to produce arrays of bytes. Here is an example using all three:</p><pre><code class="language-julia-repl">julia&gt; b&quot;DATA\xff\u2200&quot;
+ERROR: syntax: invalid escape sequence</code></pre><p>Triple-quoted regex strings, of the form <code>r&quot;&quot;&quot;...&quot;&quot;&quot;</code>, are also supported (and may be convenient for regular expressions containing quotation marks or newlines).</p><p>The <code>Regex()</code> constructor may be used to create a valid regex string programmatically.  This permits using the contents of string variables and other string operations when constructing the regex string. Any of the regex codes above can be used within the single string argument to <code>Regex()</code>. Here are some examples:</p><pre><code class="language-julia-repl">julia&gt; using Dates
+
+julia&gt; d = Date(1962,7,10)
+1962-07-10
+
+julia&gt; regex_d = Regex(&quot;Day &quot; * string(day(d)))
+r&quot;Day 10&quot;
+
+julia&gt; match(regex_d, &quot;It happened on Day 10&quot;)
+RegexMatch(&quot;Day 10&quot;)
+
+julia&gt; name = &quot;Jon&quot;
+&quot;Jon&quot;
+
+julia&gt; regex_name = Regex(&quot;[\&quot;( ]$name[\&quot;) ]&quot;)  # interpolate value of name
+r&quot;[\&quot;( ]Jon[\&quot;) ]&quot;
+
+julia&gt; match(regex_name,&quot; Jon &quot;)
+RegexMatch(&quot; Jon &quot;)
+
+julia&gt; match(regex_name,&quot;[Jon]&quot;) === nothing
+true</code></pre><h2><a class="nav-anchor" id="man-byte-array-literals-1" href="#man-byte-array-literals-1">Byte Array Literals</a></h2><p>Another useful non-standard string literal is the byte-array string literal: <code>b&quot;...&quot;</code>. This form lets you use string notation to express read only literal byte arrays – i.e. arrays of <a href="../../base/numbers/#Core.UInt8"><code>UInt8</code></a> values. The type of those objects is <code>CodeUnits{UInt8, String}</code>. The rules for byte array literals are the following:</p><ul><li>ASCII characters and ASCII escapes produce a single byte.</li><li><code>\x</code> and octal escape sequences produce the <em>byte</em> corresponding to the escape value.</li><li>Unicode escape sequences produce a sequence of bytes encoding that code point in UTF-8.</li></ul><p>There is some overlap between these rules since the behavior of <code>\x</code> and octal escapes less than 0x80 (128) are covered by both of the first two rules, but here these rules agree. Together, these rules allow one to easily use ASCII characters, arbitrary byte values, and UTF-8 sequences to produce arrays of bytes. Here is an example using all three:</p><pre><code class="language-julia-repl">julia&gt; b&quot;DATA\xff\u2200&quot;
 8-element Base.CodeUnits{UInt8,String}:
  0x44
  0x41
