--- a/en/v1.1-dev/manual/parallel-computing/index.html
+++ b/en/v1.1-dev/manual/parallel-computing/index.html
@@ -323,7 +323,7 @@ julia&gt; let B = B
            remotecall_fetch(()-&gt;B, 2)
        end;
 
-julia&gt; @fetchfrom 2 varinfo()
+julia&gt; @fetchfrom 2 InteractiveUtils.varinfo()
 name           size summary
 ––––––––– ––––––––– ––––––––––––––––––––––
 A         800 bytes 10×10 Array{Float64,2}
