--- a/en/v1.1-dev/stdlib/REPL/index.html
+++ b/en/v1.1-dev/stdlib/REPL/index.html
@@ -14,7 +14,7 @@ ga('send', 'pageview');
    _ _   _| |_  __ _   |  Type &quot;?&quot; for help, &quot;]?&quot; for Pkg help.
   | | | | | | |/ _` |  |
   | | |_| | | | (_| |  |  Version 1.1.0-DEV.unknown (2018-11-26)
- _/ |\__&#39;_|_|_|\__&#39;_|  |  Commit ce82406* (0 days old master)
+ _/ |\__&#39;_|_|_|\__&#39;_|  |  Commit a836064* (0 days old master)
 |__/                   |
 
 
@@ -113,7 +113,16 @@ split(str::T, splitter; limit, keepempty) where T&lt;:AbstractString in Base at 
 
 julia&gt; UUIDs.uuid[TAB]
 uuid1        uuid4         uuid_version</code></pre><p>Fields for output from functions can also be completed:</p><pre><code class="language-julia-repl">julia&gt; split(&quot;&quot;,&quot;&quot;)[1].[TAB]
-lastindex  offset  string</code></pre><p>The completion of fields for output from functions uses type inference, and it can only suggest fields if the function is type stable.</p><h2><a class="nav-anchor" id="Customizing-Colors-1" href="#Customizing-Colors-1">Customizing Colors</a></h2><p>The colors used by Julia and the REPL can be customized, as well. To change the color of the Julia prompt you can add something like the following to your <code>~/.julia/config/startup.jl</code> file, which is to be placed inside your home directory:</p><pre><code class="language-julia">function customize_colors(repl)
+lastindex  offset  string</code></pre><p>The completion of fields for output from functions uses type inference, and it can only suggest fields if the function is type stable.</p><p>Dictionary keys can also be tab completed:</p><pre><code class="language-julia-repl">julia&gt; foo = Dict(&quot;qwer1&quot;=&gt;1, &quot;qwer2&quot;=&gt;2, &quot;asdf&quot;=&gt;3)
+Dict{String,Int64} with 3 entries:
+  &quot;qwer2&quot; =&gt; 2
+  &quot;asdf&quot;  =&gt; 3
+  &quot;qwer1&quot; =&gt; 1
+
+julia&gt; foo[&quot;q[TAB]
+
+&quot;qwer1&quot; &quot;qwer2&quot;
+julia&gt; foo[&quot;qwer</code></pre><h2><a class="nav-anchor" id="Customizing-Colors-1" href="#Customizing-Colors-1">Customizing Colors</a></h2><p>The colors used by Julia and the REPL can be customized, as well. To change the color of the Julia prompt you can add something like the following to your <code>~/.julia/config/startup.jl</code> file, which is to be placed inside your home directory:</p><pre><code class="language-julia">function customize_colors(repl)
     repl.prompt_color = Base.text_colors[:cyan]
 end
 
@@ -207,4 +216,4 @@ julia&gt; request(menu)
  ⧐ YEP! strawberry
 ↓  NOPE blueberry
 Set([4, 2])
-</code></pre><h1><a class="nav-anchor" id="References-1" href="#References-1">References</a></h1><section class="docstring"><div class="docstring-header"><a class="docstring-binding" id="Base.atreplinit" href="#Base.atreplinit"><code>Base.atreplinit</code></a> — <span class="docstring-category">Function</span>.</div><div><div><pre><code class="language-none">atreplinit(f)</code></pre><p>Register a one-argument function to be called before the REPL interface is initialized in interactive sessions; this is useful to customize the interface. The argument of <code>f</code> is the REPL object. This function should be called from within the <code>.julia/config/startup.jl</code> initialization file.</p></div></div><a class="source-link" target="_blank" href="https://github.com/JuliaLang/julia/blob/ce82406ec5f461c16c8b2b56b5dd8bfd7ec8d267/base/client.jl#L298-L305">source</a></section><footer><hr/><a class="previous" href="../Profile/"><span class="direction">Previous</span><span class="title">Profiling</span></a><a class="next" href="../Random/"><span class="direction">Next</span><span class="title">Random Numbers</span></a></footer></article></body></html>
+</code></pre><h1><a class="nav-anchor" id="References-1" href="#References-1">References</a></h1><section class="docstring"><div class="docstring-header"><a class="docstring-binding" id="Base.atreplinit" href="#Base.atreplinit"><code>Base.atreplinit</code></a> — <span class="docstring-category">Function</span>.</div><div><div><pre><code class="language-none">atreplinit(f)</code></pre><p>Register a one-argument function to be called before the REPL interface is initialized in interactive sessions; this is useful to customize the interface. The argument of <code>f</code> is the REPL object. This function should be called from within the <code>.julia/config/startup.jl</code> initialization file.</p></div></div><a class="source-link" target="_blank" href="https://github.com/JuliaLang/julia/blob/a83606451df71916cd59fee804ecc57a873152fc/base/client.jl#L298-L305">source</a></section><footer><hr/><a class="previous" href="../Profile/"><span class="direction">Previous</span><span class="title">Profiling</span></a><a class="next" href="../Random/"><span class="direction">Next</span><span class="title">Random Numbers</span></a></footer></article></body></html>
