build based on 9b6eb0d

--- a/en/v1.1-dev/manual/constructors/index.html
+++ b/en/v1.1-dev/manual/constructors/index.html
@@ -113,7 +113,7 @@ julia&gt; Point{Int64}(1, 2) ## explicit T ##
 Point{Int64}(1, 2)
 
 julia&gt; Point{Int64}(1.0,2.5) ## explicit T ##
-ERROR: InexactError: Int64(Int64, 2.5)
+ERROR: InexactError: Int64(2.5)
 Stacktrace:
 [...]
 
