--- a/en/v1.1-dev/manual/mathematical-operations/index.html
+++ b/en/v1.1-dev/manual/mathematical-operations/index.html
@@ -136,12 +136,12 @@ julia&gt; Int8(127.0)
 127
 
 julia&gt; Int8(3.14)
-ERROR: InexactError: Int8(Int8, 3.14)
+ERROR: InexactError: Int8(3.14)
 Stacktrace:
 [...]
 
 julia&gt; Int8(128.0)
-ERROR: InexactError: Int8(Int8, 128.0)
+ERROR: InexactError: Int8(128.0)
 Stacktrace:
 [...]
 
