--- a/en/v1.1-dev/manual/types/index.html
+++ b/en/v1.1-dev/manual/types/index.html
@@ -66,7 +66,7 @@ Foo(&quot;Hello, world.&quot;, 23, 1.5)
 
 julia&gt; typeof(foo)
 Foo</code></pre><p>When a type is applied like a function it is called a <em>constructor</em>. Two constructors are generated automatically (these are called <em>default constructors</em>). One accepts any arguments and calls <a href="../../base/base/#Base.convert"><code>convert</code></a> to convert them to the types of the fields, and the other accepts arguments that match the field types exactly. The reason both of these are generated is that this makes it easier to add new definitions without inadvertently replacing a default constructor.</p><p>Since the <code>bar</code> field is unconstrained in type, any value will do. However, the value for <code>baz</code> must be convertible to <code>Int</code>:</p><pre><code class="language-julia-repl">julia&gt; Foo((), 23.5, 1)
-ERROR: InexactError: Int64(Int64, 23.5)
+ERROR: InexactError: Int64(23.5)
 Stacktrace:
 [...]</code></pre><p>You may find a list of field names using the <a href="../../base/base/#Base.fieldnames"><code>fieldnames</code></a> function.</p><pre><code class="language-julia-repl">julia&gt; fieldnames(Foo)
 (:bar, :baz, :qux)</code></pre><p>You can access the field values of a composite object using the traditional <code>foo.bar</code> notation:</p><pre><code class="language-julia-repl">julia&gt; foo.bar
