--- a/en/v1.1-dev/manual/control-flow/index.html
+++ b/en/v1.1-dev/manual/control-flow/index.html
@@ -320,12 +320,18 @@ Stacktrace:
  [1] error at ./error.jl:33 [inlined]
  [2] fussy_sqrt at ./none:1 [inlined]
  [3] verbose_fussy_sqrt(::Int64) at ./none:3
- [4] top-level scope</code></pre><h3><a class="nav-anchor" id="The-try/catch-statement-1" href="#The-try/catch-statement-1">The <code>try/catch</code> statement</a></h3><p>The <code>try/catch</code> statement allows for <code>Exception</code>s to be tested for, and for the graceful handling of things that may ordinarily break your application. For example, in the below code the function for square root would normally throw an exception. By placing a <code>try/catch</code> block around it we can mitigate that here. You may choose how you wish to handle this exception, whether logging it, return a placeholder value or as in the case below where we just printed out a statement. One thing to think about when deciding how to handle unexpected situations is that using a <code>try/catch</code> block is much slower than using conditional branching to handle those situations. Below there are more examples of handling exceptions with a <code>try/catch</code> block:</p><pre><code class="language-julia-repl">julia&gt; try
-           sqrt(&quot;ten&quot;)
-       catch e
-           println(&quot;You should have entered a numeric value&quot;)
+ [4] top-level scope</code></pre><h3><a class="nav-anchor" id="The-try/catch-statement-1" href="#The-try/catch-statement-1">The <code>try/catch</code> statement</a></h3><p>The <code>try/catch</code> statement allows for <code>Exception</code>s to be tested for. For example, a customized square root function can be written to automatically call either the real or complex square root method on demand using <code>Exception</code>s :</p><pre><code class="language-julia-repl">julia&gt; f(x) = try
+           sqrt(x)
+       catch
+           sqrt(complex(x, 0))
        end
-You should have entered a numeric value</code></pre><p><code>try/catch</code> statements also allow the <code>Exception</code> to be saved in a variable. The following contrived example calculates the square root of the second element of <code>x</code> if <code>x</code> is indexable, otherwise assumes <code>x</code> is a real number and returns its square root:</p><pre><code class="language-julia-repl">julia&gt; sqrt_second(x) = try
+f (generic function with 1 method)
+
+julia&gt; f(1)
+1.0
+
+julia&gt; f(-1)
+0.0 + 1.0im</code></pre><p>It is important to note that in real code computing this function, one would compare <code>x</code> to zero instead of catching an exception. The exception is much slower than simply comparing and branching.</p><p><code>try/catch</code> statements also allow the <code>Exception</code> to be saved in a variable. The following contrived example calculates the square root of the second element of <code>x</code> if <code>x</code> is indexable, otherwise assumes <code>x</code> is a real number and returns its square root:</p><pre><code class="language-julia-repl">julia&gt; sqrt_second(x) = try
            sqrt(x[2])
        catch y
            if isa(y, DomainError)
