--- a/en/v1.1-dev/manual/getting-started/index.html
+++ b/en/v1.1-dev/manual/getting-started/index.html
@@ -13,8 +13,8 @@ ga('send', 'pageview');
   (_)     | (_) (_)    |
    _ _   _| |_  __ _   |  Type &quot;?&quot; for help, &quot;]?&quot; for Pkg help.
   | | | | | | |/ _` |  |
-  | | |_| | | | (_| |  |  Version 1.1.0-DEV.unknown (2018-12-12)
- _/ |\__&#39;_|_|_|\__&#39;_|  |  Commit a5f23c0* (0 days old master)
+  | | |_| | | | (_| |  |  Version 1.2.0-DEV.0 (2018-12-12)
+ _/ |\__&#39;_|_|_|\__&#39;_|  |  Commit d767fcf* (0 days old master)
 |__/                   |
 
 
