--- a/en/v1.2-dev/manual/getting-started/index.html
+++ b/en/v1.2-dev/manual/getting-started/index.html
@@ -13,8 +13,8 @@ ga('send', 'pageview');
   (_)     | (_) (_)    |
    _ _   _| |_  __ _   |  Type &quot;?&quot; for help, &quot;]?&quot; for Pkg help.
   | | | | | | |/ _` |  |
-  | | |_| | | | (_| |  |  Version 1.2.0-DEV.68 (2018-12-29)
- _/ |\__&#39;_|_|_|\__&#39;_|  |  Commit 6dc205a* (0 days old master)
+  | | |_| | | | (_| |  |  Version 1.2.0-DEV.unknown (2018-12-29)
+ _/ |\__&#39;_|_|_|\__&#39;_|  |  Commit 87c18d8* (0 days old master)
 |__/                   |
 
 
