--- a/en/v1.2-dev/manual/embedding/index.html
+++ b/en/v1.2-dev/manual/embedding/index.html
@@ -73,12 +73,60 @@ jl_value_t *argument = jl_box_float64(2.0);
 jl_value_t *ret = jl_call1(func, argument);</code></pre><p>In the first step, a handle to the Julia function <code>sqrt</code> is retrieved by calling <code>jl_get_function</code>. The first argument passed to <code>jl_get_function</code> is a pointer to the <code>Base</code> module in which <code>sqrt</code> is defined. Then, the double value is boxed using <code>jl_box_float64</code>. Finally, in the last step, the function is called using <code>jl_call1</code>. <code>jl_call0</code>, <code>jl_call2</code>, and <code>jl_call3</code> functions also exist, to conveniently handle different numbers of arguments. To pass more arguments, use <code>jl_call</code>:</p><pre><code class="language-none">jl_value_t *jl_call(jl_function_t *f, jl_value_t **args, int32_t nargs)</code></pre><p>Its second argument <code>args</code> is an array of <code>jl_value_t*</code> arguments and <code>nargs</code> is the number of arguments.</p><h2><a class="nav-anchor" id="Memory-Management-1" href="#Memory-Management-1">Memory Management</a></h2><p>As we have seen, Julia objects are represented in C as pointers. This raises the question of who is responsible for freeing these objects.</p><p>Typically, Julia objects are freed by a garbage collector (GC), but the GC does not automatically know that we are holding a reference to a Julia value from C. This means the GC can free objects out from under you, rendering pointers invalid.</p><p>The GC can only run when Julia objects are allocated. Calls like <code>jl_box_float64</code> perform allocation, and allocation might also happen at any point in running Julia code. However, it is generally safe to use pointers in between <code>jl_...</code> calls. But in order to make sure that values can survive <code>jl_...</code> calls, we have to tell Julia that we hold a reference to a Julia value. This can be done using the <code>JL_GC_PUSH</code> macros:</p><pre><code class="language-c">jl_value_t *ret = jl_eval_string(&quot;sqrt(2.0)&quot;);
 JL_GC_PUSH1(&amp;ret);
 // Do something with ret
-JL_GC_POP();</code></pre><p>The <code>JL_GC_POP</code> call releases the references established by the previous <code>JL_GC_PUSH</code>. Note that <code>JL_GC_PUSH</code>  is working on the stack, so it must be exactly paired with a <code>JL_GC_POP</code> before the stack frame is destroyed.</p><p>Several Julia values can be pushed at once using the <code>JL_GC_PUSH2</code> , <code>JL_GC_PUSH3</code> , and <code>JL_GC_PUSH4</code> macros. To push an array of Julia values one can use the  <code>JL_GC_PUSHARGS</code> macro, which can be used as follows:</p><pre><code class="language-c">jl_value_t **args;
+JL_GC_POP();</code></pre><p>The <code>JL_GC_POP</code> call releases the references established by the previous <code>JL_GC_PUSH</code>. Note that <code>JL_GC_PUSH</code> stores references on the C stack, so it must be exactly paired with a <code>JL_GC_POP</code> before the scope is exited. That is, before the function returns, or control flow otherwise leaves the block in which the <code>JL_GC_PUSH</code> was invoked.</p><p>Several Julia values can be pushed at once using the <code>JL_GC_PUSH2</code> , <code>JL_GC_PUSH3</code> , <code>JL_GC_PUSH4</code> , <code>JL_GC_PUSH5</code> , and <code>JL_GC_PUSH6</code> macros. To push an array of Julia values one can use the <code>JL_GC_PUSHARGS</code> macro, which can be used as follows:</p><pre><code class="language-c">jl_value_t **args;
 JL_GC_PUSHARGS(args, 2); // args can now hold 2 `jl_value_t*` objects
 args[0] = some_value;
 args[1] = some_other_value;
 // Do something with args (e.g. call jl_... functions)
-JL_GC_POP();</code></pre><p>The garbage collector also operates under the assumption that it is aware of every old-generation object pointing to a young-generation one. Any time a pointer is updated breaking that assumption, it must be signaled to the collector with the <code>jl_gc_wb</code> (write barrier) function like so:</p><pre><code class="language-c">jl_value_t *parent = some_old_value, *child = some_young_value;
+JL_GC_POP();</code></pre><p>Each scope must have only one call to <code>JL_GC_PUSH*</code>. Hence, if all variables cannot be pushed once by a single call to <code>JL_GC_PUSH*</code>, or if there are more than 6 variables to be pushed and using an array of arguments is not an option, then one can use inner blocks:</p><pre><code class="language-c">jl_value_t *ret1 = jl_eval_string(&quot;sqrt(2.0)&quot;);
+JL_GC_PUSH1(&amp;ret1);
+jl_value_t *ret2 = 0;
+{
+    jl_function_t *func = jl_get_function(jl_base_module, &quot;exp&quot;);
+    ret2 = jl_call1(func, ret1);
+    JL_GC_PUSH1(&amp;ret2);
+    // Do something with ret2.
+    JL_GC_POP();    // This pops ret2.
+}
+JL_GC_POP();    // This pops ret1.</code></pre><p>If it is required to hold the pointer to a variable between functions (or block scopes), then it is not possible to use <code>JL_GC_PUSH*</code>. In this case, it is necessary to create and keep a reference to the variable in the Julia global scope. One simple way to accomplish this is to use a global <code>IdDict</code> that will hold the references, avoiding deallocation by the GC. However, this method will only work properly with mutable types.</p><pre><code class="language-c">// This functions shall be executed only once, during the initialization.
+jl_value_t* refs = jl_eval_string(&quot;refs = IdDict()&quot;);
+jl_function_t* setindex = jl_get_function(jl_base_module, &quot;setindex!&quot;);
+
+...
+
+// `var` is the variable we want to protect between function calls.
+jl_value_t* var = 0;
+
+...
+
+// `var` is a `Vector{Float64}`, which is mutable.
+var = jl_eval_string(&quot;[sqrt(2.0); sqrt(4.0); sqrt(6.0)]&quot;);
+
+// To protect `var`, add its reference to `refs`.
+jl_call3(setindex, refs, var, var);</code></pre><p>If the variable is immutable, then it needs to be wrapped in an equivalent mutable container or, preferably, in a <code>RefValue{Any}</code> before it is pushed to <code>IdDict</code>. In this approach, the container has to be created or filled in via C code using, for example, the function <code>jl_new_struct</code>. If the container is created by <code>jl_call*</code>, then you will need to reload the pointer to be used in C code.</p><pre><code class="language-c">// This functions shall be executed only once, during the initialization.
+jl_value_t* refs = jl_eval_string(&quot;refs = IdDict()&quot;);
+jl_function_t* setindex = jl_get_function(jl_base_module, &quot;setindex!&quot;);
+jl_datatype_t* reft = (jl_datatype_t*)jl_eval_string(&quot;Base.RefValue{Any}&quot;);
+
+...
+
+// `var` is the variable we want to protect between function calls.
+jl_value_t* var = 0;
+
+...
+
+// `var` is a `Float64`, which is immutable.
+var = jl_eval_string(&quot;sqrt(2.0)&quot;);
+
+// Protect `var` until we add its reference to `refs`.
+JL_GC_PUSH1(&amp;var);
+
+// Wrap `var` in `RefValue{Any}` and push to `refs` to protect it.
+jl_value_t* rvar = jl_new_struct(reft, var);
+JL_GC_POP();
+
+jl_call3(setindex, refs, rvar, rvar);</code></pre><p>The GC can be allowed to deallocate a variable by removing the reference to it from <code>refs</code> using the function <code>delete!</code>, provided that no other reference to the variable is kept anywhere:</p><pre><code class="language-c">jl_function_t* delete = jl_get_function(jl_base_module, &quot;delete!&quot;);
+jl_call2(delete, refs, rvar);</code></pre><p>As an alternative for very simple cases, it is possible to just create a global container of type <code>Vector{Any}</code> and fetch the elements from that when necessary, or even to create one global variable per pointer using</p><pre><code class="language-c">jl_set_global(jl_main_module, jl_symbol(&quot;var&quot;), var);</code></pre><h3><a class="nav-anchor" id="Updating-fields-of-GC-managed-objects-1" href="#Updating-fields-of-GC-managed-objects-1">Updating fields of GC-managed objects</a></h3><p>The garbage collector operates under the assumption that it is aware of every old-generation object pointing to a young-generation one. Any time a pointer is updated breaking that assumption, it must be signaled to the collector with the <code>jl_gc_wb</code> (write barrier) function like so:</p><pre><code class="language-c">jl_value_t *parent = some_old_value, *child = some_young_value;
 ((some_specific_type*)parent)-&gt;field = child;
 jl_gc_wb(parent, child);</code></pre><p>It is in general impossible to predict which values will be old at runtime, so the write barrier must be inserted after all explicit stores. One notable exception is if the <code>parent</code> object was just allocated and garbage collection was not run since then. Remember that most <code>jl_...</code> functions can sometimes invoke garbage collection.</p><p>The write barrier is also necessary for arrays of pointers when updating their data directly. For example:</p><pre><code class="language-c">jl_array_t *some_array = ...; // e.g. a Vector{Any}
 void **data = (void**)jl_array_data(some_array);
