build based on 1c1fc03

--- a/en/v1.2-dev/manual/arrays/index.html
+++ b/en/v1.2-dev/manual/arrays/index.html
@@ -144,10 +144,7 @@ julia&gt; x[2:3, 2:end-1]
 julia&gt; x[1, [2 3; 4 1]]
 2×2 Array{Int64,2}:
   5  9
- 13  1</code></pre><p>Empty ranges of the form <code>n:n-1</code> are sometimes used to indicate the inter-index location between <code>n-1</code> and <code>n</code>. For example, the <a href="../../base/sort/#Base.Sort.searchsorted"><code>searchsorted</code></a> function uses this convention to indicate the insertion point of a value not found in a sorted array:</p><pre><code class="language-julia-repl">julia&gt; a = [1,2,5,6,7];
-
-julia&gt; searchsorted(a, 4)
-3:2</code></pre><h2><a class="nav-anchor" id="Assignment-1" href="#Assignment-1">Assignment</a></h2><p>The general syntax for assigning values in an n-dimensional array <code>A</code> is:</p><pre><code class="language-none">A[I_1, I_2, ..., I_n] = X</code></pre><p>where each <code>I_k</code> may be a scalar integer, an array of integers, or any other <a href="#man-supported-index-types-1">supported index</a>. This includes <a href="../../base/arrays/#Base.Colon"><code>Colon</code></a> (<code>:</code>) to select all indices within the entire dimension, ranges of the form <code>a:c</code> or <code>a:b:c</code> to select contiguous or strided subsections, and arrays of booleans to select elements at their <code>true</code> indices.</p><p>If all indices <code>I_k</code> are integers, then the value in location <code>I_1, I_2, ..., I_n</code> of <code>A</code> is overwritten with the value of <code>X</code>, <a href="../../base/base/#Base.convert"><code>convert</code></a>ing to the <a href="../../base/collections/#Base.eltype"><code>eltype</code></a> of <code>A</code> if necessary.</p><p>If any index <code>I_k</code> selects more than one location, then the right hand side <code>X</code> must be an array with the same shape as the result of indexing <code>A[I_1, I_2, ..., I_n]</code> or a vector with the same number of elements. The value in location <code>I_1[i_1], I_2[i_2], ..., I_n[i_n]</code> of <code>A</code> is overwritten with the value <code>X[I_1, I_2, ..., I_n]</code>, converting if necessary. The element-wise assignment operator <code>.=</code> may be used to <a href="#Broadcasting-1">broadcast</a> <code>X</code> across the selected locations:</p><pre><code class="language-none">A[I_1, I_2, ..., I_n] .= X</code></pre><p>Just as in <a href="#man-array-indexing-1">Indexing</a>, the <code>end</code> keyword may be used to represent the last index of each dimension within the indexing brackets, as determined by the size of the array being assigned into. Indexed assignment syntax without the <code>end</code> keyword is equivalent to a call to <a href="../../base/collections/#Base.setindex!"><code>setindex!</code></a>:</p><pre><code class="language-none">setindex!(A, X, I_1, I_2, ..., I_n)</code></pre><p>Example:</p><pre><code class="language-julia-repl">julia&gt; x = collect(reshape(1:9, 3, 3))
+ 13  1</code></pre><h2><a class="nav-anchor" id="Assignment-1" href="#Assignment-1">Assignment</a></h2><p>The general syntax for assigning values in an n-dimensional array <code>A</code> is:</p><pre><code class="language-none">A[I_1, I_2, ..., I_n] = X</code></pre><p>where each <code>I_k</code> may be a scalar integer, an array of integers, or any other <a href="#man-supported-index-types-1">supported index</a>. This includes <a href="../../base/arrays/#Base.Colon"><code>Colon</code></a> (<code>:</code>) to select all indices within the entire dimension, ranges of the form <code>a:c</code> or <code>a:b:c</code> to select contiguous or strided subsections, and arrays of booleans to select elements at their <code>true</code> indices.</p><p>If all indices <code>I_k</code> are integers, then the value in location <code>I_1, I_2, ..., I_n</code> of <code>A</code> is overwritten with the value of <code>X</code>, <a href="../../base/base/#Base.convert"><code>convert</code></a>ing to the <a href="../../base/collections/#Base.eltype"><code>eltype</code></a> of <code>A</code> if necessary.</p><p>If any index <code>I_k</code> selects more than one location, then the right hand side <code>X</code> must be an array with the same shape as the result of indexing <code>A[I_1, I_2, ..., I_n]</code> or a vector with the same number of elements. The value in location <code>I_1[i_1], I_2[i_2], ..., I_n[i_n]</code> of <code>A</code> is overwritten with the value <code>X[I_1, I_2, ..., I_n]</code>, converting if necessary. The element-wise assignment operator <code>.=</code> may be used to <a href="#Broadcasting-1">broadcast</a> <code>X</code> across the selected locations:</p><pre><code class="language-none">A[I_1, I_2, ..., I_n] .= X</code></pre><p>Just as in <a href="#man-array-indexing-1">Indexing</a>, the <code>end</code> keyword may be used to represent the last index of each dimension within the indexing brackets, as determined by the size of the array being assigned into. Indexed assignment syntax without the <code>end</code> keyword is equivalent to a call to <a href="../../base/collections/#Base.setindex!"><code>setindex!</code></a>:</p><pre><code class="language-none">setindex!(A, X, I_1, I_2, ..., I_n)</code></pre><p>Example:</p><pre><code class="language-julia-repl">julia&gt; x = collect(reshape(1:9, 3, 3))
 3×3 Array{Int64,2}:
  1  4  7
  2  5  8
@@ -258,7 +255,47 @@ julia&gt; x[mask]
   2
   4
   8
- 16</code></pre><h2><a class="nav-anchor" id="Iteration-1" href="#Iteration-1">Iteration</a></h2><p>The recommended ways to iterate over a whole array are</p><pre><code class="language-julia">for a in A
+ 16</code></pre><h3><a class="nav-anchor" id="Number-of-indices-1" href="#Number-of-indices-1">Number of indices</a></h3><h4><a class="nav-anchor" id="Cartesian-indexing-1" href="#Cartesian-indexing-1">Cartesian indexing</a></h4><p>The ordinary way to index into an <code>N</code>-dimensional array is to use exactly <code>N</code> indices; each index selects the position(s) in its particular dimension. For example, in the three-dimensional array <code>A = rand(4, 3, 2)</code>, <code>A[2, 3, 1]</code> will select the number in the second row of the third column in the first &quot;page&quot; of the array. This is often referred to as <em>cartesian indexing</em>.</p><h4><a class="nav-anchor" id="Linear-indexing-1" href="#Linear-indexing-1">Linear indexing</a></h4><p>When exactly one index <code>i</code> is provided, that index no longer represents a location in a particular dimension of the array. Instead, it selects the <code>i</code>th element using the column-major iteration order that linearly spans the entire array. This is known as <em>linear indexing</em>. It essentially treats the array as though it had been reshaped into a one-dimensional vector with <a href="../../base/arrays/#Base.vec"><code>vec</code></a>.</p><pre><code class="language-julia-repl">julia&gt; A = [2 6; 4 7; 3 1]
+3×2 Array{Int64,2}:
+ 2  6
+ 4  7
+ 3  1
+
+julia&gt; A[5]
+7
+
+julia&gt; vec(A)[5]
+7</code></pre><p>A linear index into the array <code>A</code> can be converted to a <code>CartesianIndex</code> for cartesian indexing with <code>CartesianIndices(A)[i]</code> (see <a href="../../base/arrays/#Base.IteratorsMD.CartesianIndices"><code>CartesianIndices</code></a>), and a set of <code>N</code> cartesian indices can be converted to a linear index with <code>LinearIndices(A)[i_1, i_2, ..., i_N]</code> (see <a href="../../base/arrays/#Base.LinearIndices"><code>LinearIndices</code></a>).</p><pre><code class="language-julia-repl">julia&gt; CartesianIndices(A)[5]
+CartesianIndex(2, 2)
+
+julia&gt; LinearIndices(A)[2, 2]
+5</code></pre><p>It&#39;s important to note that there&#39;s a very large assymmetry in the performance of these conversions. Converting a linear index to a set of cartesian indices requires dividing and taking the remainder, whereas going the other way is just multiplies and adds. In modern processors, integer division can be 10-50 times slower than multiplication. While some arrays — like <a href="../../base/arrays/#Core.Array"><code>Array</code></a> itself — are implemented using a linear chunk of memory and directly use a linear index in their implementations, other arrays — like <a href="../../stdlib/LinearAlgebra/#LinearAlgebra.Diagonal"><code>Diagonal</code></a> — need the full set of cartesian indices to do their lookup (see <a href="../../base/arrays/#Base.IndexStyle"><code>IndexStyle</code></a> to introspect which is which). As such, when iterating over an entire array, it&#39;s much better to iterate over <a href="../../base/arrays/#Base.eachindex"><code>eachindex(A)</code></a> instead of <code>1:length(A)</code>. Not only will the former be much faster in cases where <code>A</code> is <code>IndexCartesian</code>, but it will also support OffsetArrays, too.</p><h4><a class="nav-anchor" id="Omitted-and-extra-indices-1" href="#Omitted-and-extra-indices-1">Omitted and extra indices</a></h4><p>In addition to linear indexing, an <code>N</code>-dimensional array may be indexed with fewer or more than <code>N</code> indices in certain situations.</p><p>Indices may be omitted if the trailing dimensions that are not indexed into are all length one. In other words, trailing indices can be omitted only if there is only one possible value that those omitted indices could be for an in-bounds indexing expression. For example, a four-dimensional array with size <code>(3, 4, 2, 1)</code> may be indexed with only three indices as the dimension that gets skipped (the fourth dimension) has length one. Note that linear indexing takes precedence over this rule.</p><pre><code class="language-julia-repl">julia&gt; A = reshape(1:24, 3, 4, 2, 1)
+3×4×2×1 reshape(::UnitRange{Int64}, 3, 4, 2, 1) with eltype Int64:
+[:, :, 1, 1] =
+ 1  4  7  10
+ 2  5  8  11
+ 3  6  9  12
+
+[:, :, 2, 1] =
+ 13  16  19  22
+ 14  17  20  23
+ 15  18  21  24
+
+julia&gt; A[1, 3, 2] # Omits the fourth dimension (length 1)
+19
+
+julia&gt; A[1, 3] # Attempts to omit dimensions 3 &amp; 4 (lengths 2 and 1)
+ERROR: BoundsError: attempt to access 3×4×2×1 reshape(::UnitRange{Int64}, 3, 4, 2, 1) with eltype Int64 at index [1, 3]
+
+julia&gt; A[19] # Linear indexing
+19</code></pre><p>When omitting <em>all</em> indices with <code>A[]</code>, this semantic provides a simple idiom to retrieve the only element in an array and simultaneously ensure that there was only one element.</p><p>Similarly, more than <code>N</code> indices may be provided if all the indices beyond the dimensionality of the array are <code>1</code> (or more generally are the first and only element of <code>axes(A, d)</code> where <code>d</code> is that particular dimension number). This allows vectors to be indexed like one-column matrices, for example:</p><pre><code class="language-julia-repl">julia&gt; A = [8,6,7]
+3-element Array{Int64,1}:
+ 8
+ 6
+ 7
+
+julia&gt; A[2,1]
+6</code></pre><h2><a class="nav-anchor" id="Iteration-1" href="#Iteration-1">Iteration</a></h2><p>The recommended ways to iterate over a whole array are</p><pre><code class="language-julia">for a in A
     # Do something with the element a
 end
 
