--- a/en/v1.2-dev/manual/missing/index.html
+++ b/en/v1.2-dev/manual/missing/index.html
@@ -116,14 +116,30 @@ julia&gt; y = Union{Missing, String}[missing, &quot;b&quot;]
 julia&gt; convert(Array{String}, y)
 ERROR: MethodError: Cannot `convert` an object of type Missing to an object of type String</code></pre><h2><a class="nav-anchor" id="Skipping-Missing-Values-1" href="#Skipping-Missing-Values-1">Skipping Missing Values</a></h2><p>Since <code>missing</code> values propagate with standard mathematical operators, reduction functions return <code>missing</code> when called on arrays which contain missing values</p><pre><code class="language-julia-repl">julia&gt; sum([1, missing])
 missing</code></pre><p>In this situation, use the <a href="../../base/base/#Base.skipmissing"><code>skipmissing</code></a> function to skip missing values</p><pre><code class="language-julia-repl">julia&gt; sum(skipmissing([1, missing]))
-1</code></pre><p>This convenience function returns an iterator which filters out <code>missing</code> values efficiently. It can therefore be used with any function which supports iterators</p><pre><code class="language-julia-repl">julia&gt; maximum(skipmissing([3, missing, 2, 1]))
+1</code></pre><p>This convenience function returns an iterator which filters out <code>missing</code> values efficiently. It can therefore be used with any function which supports iterators</p><pre><code class="language-julia-repl">julia&gt; x = skipmissing([3, missing, 2, 1])
+Base.SkipMissing{Array{Union{Missing, Int64},1}}(Union{Missing, Int64}[3, missing, 2, 1])
+
+julia&gt; maximum(x)
 3
 
-julia&gt; mean(skipmissing([3, missing, 2, 1]))
+julia&gt; mean(x)
 2.0
 
-julia&gt; mapreduce(sqrt, +, skipmissing([3, missing, 2, 1]))
-4.146264369941973</code></pre><p>Use <a href="../../base/collections/#Base.collect-Tuple{Any}"><code>collect</code></a> to extract non-<code>missing</code> values and store them in an array</p><pre><code class="language-julia-repl">julia&gt; collect(skipmissing([3, missing, 2, 1]))
+julia&gt; mapreduce(sqrt, +, x)
+4.146264369941973</code></pre><p>Objects created by calling <code>skipmissing</code> on an array can be indexed using indices from the parent array. Indices corresponding to missing values are not valid for these objects and an error is thrown when trying to use them (they are also skipped by <code>keys</code> and <code>eachindex</code>)</p><pre><code class="language-julia-repl">julia&gt; x[1]
+3
+
+julia&gt; x[2]
+ERROR: MissingException: the value at index (2,) is missing
+[...]</code></pre><p>This allows functions which operate on indices to work in combination with <code>skipmissing</code>. This is notably the case for search and find functions, which return indices valid for the object returned by <code>skipmissing</code> which are also the indices of the matching entries <em>in the parent array</em></p><pre><code class="language-julia-repl">julia&gt; findall(==(1), x)
+1-element Array{Int64,1}:
+ 4
+
+julia&gt; findfirst(!iszero, x)
+1
+
+julia&gt; argmax(x)
+1</code></pre><p>Use <a href="../../base/collections/#Base.collect-Tuple{Any}"><code>collect</code></a> to extract non-<code>missing</code> values and store them in an array</p><pre><code class="language-julia-repl">julia&gt; collect(x)
 3-element Array{Int64,1}:
  3
  2
