--- a/en/v1.2-dev/manual/methods/index.html
+++ b/en/v1.2-dev/manual/methods/index.html
@@ -267,7 +267,7 @@ map(::Base.IndexLinear, f, a::AbstractArray, b::AbstractArray) = ...</code></pre
     output = similar(b, R, (size(a, 1), size(b, 2)))
     if size(a, 2) &gt; 0
         for j in 1:size(b, 2)
-            for i in 1:size(b, 1)
+            for i in 1:size(a, 1)
                 ## here we don&#39;t use `ab = zero(R)`,
                 ## since `R` might be `Any` and `zero(Any)` is not defined
                 ## we also must declare `ab::R` to make the type of `ab` constant in the loop,
