--- a/en/v1.2-dev/manual/performance-tips/index.html
+++ b/en/v1.2-dev/manual/performance-tips/index.html
@@ -301,7 +301,7 @@ end</code></pre><p>Now we will time each of these functions using the same rando
 
 julia&gt; fmt(f) = println(rpad(string(f)*&quot;: &quot;, 14, &#39; &#39;), @elapsed f(x))
 
-julia&gt; map(fmt, Any[copy_cols, copy_rows, copy_col_row, copy_row_col]);
+julia&gt; map(fmt, [copy_cols, copy_rows, copy_col_row, copy_row_col]);
 copy_cols:    0.331706323
 copy_rows:    1.799009911
 copy_col_row: 0.415630047
